--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/eslint": "1.9.0",
     "@nuxt/ui": "4.0.1",
     "countup": "^1.8.2",
+    "countup.js": "^2.9.0",
     "eslint": "^9.36.0",
     "nuxt": "^4.1.2",
     "typescript": "^5.9.3",
