--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   "dependencies": {
     "@nuxt/eslint": "1.9.0",
     "@nuxt/ui": "4.0.1",
-    "countup": "^1.8.2",
     "countup.js": "^2.9.0",
     "eslint": "^9.36.0",
     "nuxt": "^4.1.2",
     "typescript": "^5.9.3",
     "vue": "^3.5.22",
+    "vue-countup-v2": "^4.0.0",
     "vue-countup-v3": "^1.4.2",
     "vue-router": "^4.5.1"
   },
